fixed about me section on smaller screens

--- a/css/styles.css
+++ b/css/styles.css
@@ -47,14 +47,15 @@ body {
 /* About Me Styling */
 
 #mypicture {
-  max-width: 10%;
+  max-width: 60%;
   max-height: auto;
-  float:left;
+  float:right;
 }
 
 .aboutme-text {
-  float:left;
-  margin-left: 50px;
+  /*float:left;*/
+  margin-left: 5px;
+  margin-right: 400px;
 }
 
 .clear {
@@ -117,14 +118,25 @@ body {
   }
 }
 @media screen and (min-width: 480px) {
+
   h3.text-right {
     text-align: left;
   }
-  .nav-title {
-    display: none;
+  #mypicture {
+    max-width: 50%;
+    max-height: auto;
+    float:none;
+
+  }
+
+  .aboutme-text {
+
+    margin-left: 5px;
+    margin-right: 5px;
   }
 }
 @media screen and (min-width: 320px) {
+
   h3.text-right {
     text-align: left;
   }
